[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/misc/Dialog_box.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/misc/CutscenePlayer.gd" type="Script" id=2]
[ext_resource path="res://scenes/misc/LocationLine.tscn" type="PackedScene" id=3]

[sub_resource type="Animation" id=1]
resource_name = "fade_to_black"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CutscenePlayer/ColorAboveUI:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CutscenePlayer/ColorAboveUI:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="CutscenePlayer" type="AnimationPlayer"]
anims/fade_to_black = SubResource( 1 )
script = ExtResource( 2 )

[node name="ColorBelowUI" type="ColorRect" parent="."]
visible = false
margin_left = -11.0
margin_top = -5.0
margin_right = 1650.0
margin_bottom = 995.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Dialog_box" parent="." instance=ExtResource( 1 )]
margin_left = 20.0
margin_top = -55.0
margin_right = -10.0
margin_bottom = 295.0

[node name="LocationLine" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 40 )

[node name="ColorAboveUI" type="ColorRect" parent="."]
margin_left = -24.0
margin_top = -10.0
margin_right = 1785.0
margin_bottom = 1060.0
color = Color( 0, 0, 0, 0.2 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}
[connection signal="animation_finished" from="." to="." method="_on_CutscenePlayer_animation_finished"]
[connection signal="next_moment" from="Dialog_box" to="." method="_on_Dialog_box_next_moment"]
